# wgsl-analyzer

./: .markdownlint.jsonc  Cargo.toml
crates/base_db/: Cargo.toml
crates/base_db/src/: change.rs  input.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir/src/: diagnostics.rs  lib.rs
crates/hir_def/: Cargo.toml
crates/hir_def/src/: attributes.rs  body.rs  data.rs  database.rs  lib.rs  module_data.rs  resolver.rs  type_ref.rs
crates/hir_def/src/body/: lower.rs  scope.rs
crates/hir_ty/: Cargo.toml
crates/hir_ty/src/: database.rs  function.rs  infer.rs
crates/ide-db/: Cargo.toml
crates/ide-db/src/: assists.rs  label.rs  lib.rs  source_change.rs  text_edit.rs
crates/ide/src/: lib.rs
crates/ide_completion/: Cargo.toml
crates/ide_completion/src/: item.rs
crates/parser/: Cargo.toml
crates/parser/src/: grammar.rs  lib.rs  syntax_kind.rs
crates/query-group-macro/: Cargo.toml
crates/query-group-macro/src/: lib.rs  queries.rs
crates/query-group-macro/tests/: arity.rs  hello_world.rs  interned.rs  lru.rs  multiple_dbs.rs  old_and_new.rs  result.rs  supertrait.rs  tuples.rs
crates/span/: Cargo.toml
crates/span/src/: ast_id.rs  hygiene.rs  lib.rs  map.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: ast.rs  lib.rs  pointer.rs  syntax_error.rs  syntax_node.rs
crates/wgsl-analyzer/: Cargo.toml
crates/wgsl-analyzer/src/: dispatch.rs  global_state.rs  main_loop.rs
crates/wgslfmt/src/: main.rs
editors/code/: eslint.config.mts  package-lock.json  package.json
editors/code/src/: config.ts  ctx.ts  diagnostics.ts
(+2 files in other folders)
