[package]
name = "base-db"
version = "0.0.0"
repository.workspace = true
description = "Basic database traits for wgsl-analyzer. The concrete DB is defined by `ide` (aka `wa_ap_ide`)."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
salsa = "0.20.0"
rowan.workspace = true
query-group.workspace = true
rustc-hash.workspace = true
syntax.workspace = true
regex = { version = "1.11.1", default-features = false, features = ["std"] }
tracing.workspace = true

line-index.workspace = true
vfs.workspace = true
span.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
